--- a/views/add-product.html
+++ b/views/add-product.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Shopaholic</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/forms.css">
+    <link rel="stylesheet" type="text/css" href="/css/product.css">
+</head>
 
 <body>
     <header class="main-header">
@@ -19,12 +22,13 @@
     </header>
 
     <main>
-        <form class="product-form" action="/admin/add-product" method="post">
+        <form class="product-form" action="/admin/add-product" method="POST">
             <div class="form-control">
                 <label for="title">Title</label>
                 <input type="text" name="title" id="title">
             </div>
-            <button type="submit">Add Product</button>
+
+            <button class="btn" type="submit">Add Product</button>
         </form>
     </main>
 </body>
