--- a/views/shop.pug
+++ b/views/shop.pug
@@ -18,4 +18,4 @@ block content
                         div.card__actions
                             button.btn Add To Cart
         else
-            h1 No Products                            
+            h1 No Products Found                            
