--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -1,9 +1,9 @@
-<%- include('includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/product.css">
+<%- include('../includes/head.ejs') %>
+<link rel="stylesheet" href="/css/product.css">
 </head>
 
 <body>
-    <%- include('includes/navigation.ejs') %>
+    <%- include('../includes/navigation.ejs') %>
 
     <main>
         <% if(hasProducts) { %>
@@ -14,12 +14,11 @@
                     <h1 class="product__title"><%= product.title %></h1>
                 </header>
                 <div class="card__image">
-                    <img src="https://images.theconversation.com/files/38926/original/5cwx89t4-1389586191.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=926&fit=clip"
-                        alt="image">
+                    <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
                 </div>
                 <div class="card__content">
-                    <h2 class="product__price"></h2>
-                    <p class="product__description"></p>
+                    <h2 class="product__price">€ <%= product.price %></h2>
+                    <p class="product__description"><%= product.description %></p>
                 </div>
                 <div class="card__actions">
                     <button class="btn">Add to Cart</button>
@@ -28,7 +27,7 @@
             <% } %>
         </div>
         <% } else { %>
-            <h1>No Products Found!</h1>
+        <h1>No Products Found!</h1>
         <% } %>
     </main>
-<%- include('includes/end.ejs') %>
+    <%- include('../includes/end.ejs') %>
