--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -3,4 +3,23 @@
 
 <body>
     <%- include('../includes/navigation.ejs') %>
+    <main>
+        <% if (products.length > 0) {  %>
+        <ul>
+            <% products.forEach(p => { %>
+            <li>
+                <p>
+                    <%= p.productData.title %> ( <%= p.quantity %> )
+                    <form action="/cart-delete-item" method="post">
+                        <input type="hidden" name="productID" value="<%= p.productData.ID %>">
+                        <button class="btn" type="submit">Delete</button>
+                    </form>
+                </p>
+            </li>
+            <% }) %>
+        </ul>
+        <% } else { %>
+        <h1>No Products in Cart!</h1>
+        <% } %>
+    </main>
     <%- include('../includes/end.ejs') %>
