--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -29,7 +29,7 @@
                     rows="5"><% if(editing) { %> <%=product.description%><% } %></textarea>
             </div>
             <% if (editing) { %>
-            <input type="hidden" value="<%= product.id %>" name="productID">
+            <input type="hidden" value="<%= product._id %>" name="productID">
             <% } %>
             <button class="btn" type="submit"><% if(editing) { %>Update Product<% } else { %>Add Product<%} %></button>
         </form>
