--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -14,9 +14,9 @@
                     <li>
                         <h1># <%= order.id %> </h1>
                         <ul>
-                            <% order.products.forEach(product => { %>
+                            <% order.items.forEach(product => { %>
                                 <li>
-                                    <%= product.title %> (<%= product.orderItem.quantity %>)
+                                    <%= product.title %> (<%= product.quantity %>)
                                 </li>
                             <% }); %>
                         </ul>
