--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -1,4 +1,5 @@
 <%- include('../includes/head.ejs') %>
+<link rel="stylesheet" href="/css/orders.css">
 </head>
 
 <body>
@@ -9,14 +10,14 @@
             Nothing there!
         </h1>
         <% } else { %>
-            <ul>
+            <ul class="orders">
                 <% orders.forEach(order => { %>
-                    <li>
-                        <h1># <%= order.id %> </h1>
-                        <ul>
-                            <% order.items.forEach(product => { %>
-                                <li>
-                                    <%= product.title %> (<%= product.quantity %>)
+                    <li class="orders__item">
+                        <h1>Order - # <%= order.id %></h1>
+                        <ul class="orders__products">
+                            <% order.products.forEach(product => { %>
+                                <li class="orders__products-item">
+                                    <%= product.product.title %> (<%= product.quantity %>)
                                 </li>
                             <% }); %>
                         </ul>
