--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -27,12 +27,22 @@
           >Orders</a
         >
       </li>
-      <!-- <li class="main-header__item"><a
-                                        class="<%= typeof path !== 'undefined' && path === '/admin/add-product' ? 'active' : '' %>"
-                                        href="/admin/add-product">Add Product</a></li>
-                        <li class="main-header__item"><a
-                                        class="<%= typeof path !== 'undefined' && path === '/admin/products' ? 'active' : '' %>"
-                                        href="/admin/products">Admin Products</a></li> -->
+      <% if(isAuthenticated) { %>
+      <li class="main-header__item">
+        <a
+          class="<%= typeof path !== 'undefined' && path === '/admin/add-product' ? 'active' : '' %>"
+          href="/admin/add-product"
+          >Add Product</a
+        >
+      </li>
+      <li class="main-header__item">
+        <a
+          class="<%= typeof path !== 'undefined' && path === '/admin/products' ? 'active' : '' %>"
+          href="/admin/products"
+          >Admin Products</a
+        >
+      </li>
+      <% } %>
     </ul>
     <ul class="main-header__item-list">
       <li class="main-header__item">
