--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -13,6 +13,7 @@
           >Products</a
         >
       </li>
+      <% if(isAuthenticated) { %>
       <li class="main-header__item">
         <a
           class="<%= typeof path !== 'undefined' && path === '/cart' ? 'active' : '' %>"
@@ -27,7 +28,6 @@
           >Orders</a
         >
       </li>
-      <% if(isAuthenticated) { %>
       <li class="main-header__item">
         <a
           class="<%= typeof path !== 'undefined' && path === '/admin/add-product' ? 'active' : '' %>"
@@ -45,9 +45,17 @@
       <% } %>
     </ul>
     <ul class="main-header__item-list">
+      <% if (!isAuthenticated) { %>
       <li class="main-header__item">
         <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
       </li>
+      <% } else { %>
+      <li class="main-header__item">
+        <form action="/logout" method="post">
+          <button type="submit">Logout</button>
+        </form>
+      </li>
+      <% } %>
     </ul>
   </nav>
 </header>
