--- a/views/auth/new-password.ejs
+++ b/views/auth/new-password.ejs
@@ -12,20 +12,16 @@
             <%= errorMessage %>
         </div>
         <% } %>
-        <form class="login-form" action="/login" method="POST">
-            <div class="form-control">
-                <label for="email">Email</label>
-                <input type="email" name="email" id="email">
-            </div>
+        <form class="reset-password-form" action="/new-password" method="POST">
             <div class="form-control">
                 <label for="password">Password</label>
-                <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
                 <input type="password" name="password" id="password ">
             </div>
-            <button class="btn" type="submit">Login</button>
+
+            <input type="hidden" name="userID" value="<%= userID %>" />
+            <input type="hidden" name="passwordToken" value="<%= passwordToken %>" />
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
+            <button class="btn" type="submit">Update Password</button>
         </form>
-        <div class="centered reset-password">
-            <a href="/reset">Reset Password</a>
-        </div>
     </main>
     <%- include('../includes/end.ejs') %>
