--- a/views/auth/reset.ejs
+++ b/views/auth/reset.ejs
@@ -12,20 +12,12 @@
             <%= errorMessage %>
         </div>
         <% } %>
-        <form class="login-form" action="/login" method="POST">
+        <form class="reset-password-form" action="/reset" method="POST">
             <div class="form-control">
                 <label for="email">Email</label>
                 <input type="email" name="email" id="email">
             </div>
-            <div class="form-control">
-                <label for="password">Password</label>
-                <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
-                <input type="password" name="password" id="password ">
-            </div>
-            <button class="btn" type="submit">Login</button>
-        </form>
-        <div class="centered reset-password">
-            <a href="/reset">Reset Password</a>
-        </div>
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
+            <button class="btn" type="submit">Reset Password</form>
     </main>
     <%- include('../includes/end.ejs') %>
